# eulumdat-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  GIT_CLEANUP.sh  LICENSE-APACHE  NOTES.md  Package.swift  README.md  demo.tape  deny.toml  taplo.toml
crates/eulumdat-bevy/: Cargo.toml  Trunk.toml  index.html
crates/eulumdat-bevy-rt/: Cargo.toml  Trunk.toml  comparison.html  index.html
crates/eulumdat-bevy-rt/.cargo/: config.toml
crates/eulumdat-bevy-rt/examples/: rt_demo.rs
crates/eulumdat-bevy-rt/src/: lib.rs
crates/eulumdat-bevy-rt/src/detector/: mod.rs
crates/eulumdat-bevy-rt/src/scene/: binder.rs  bvh.rs  bvh.wgsl  common.wgsl  extract.rs  intersect.wgsl  mod.rs  types.rs
crates/eulumdat-bevy-rt/src/shaders/: common.wgsl  material.wgsl  trace_camera.wgsl  trace_detector.wgsl
crates/eulumdat-bevy-rt/src/tracer/: extract.rs  mod.rs  node.rs  prepare.rs  trace_camera.wgsl
crates/eulumdat-bevy/examples/: light_stress.rs  obscura_demo.rs
crates/eulumdat-bevy/src/: camera.rs  eulumdat_impl.rs  lib.rs  lighting.rs  main.rs  scene.rs
crates/eulumdat-bevy/src/photometric/: color.rs  data.rs  light.rs  mesh.rs  mod.rs  plugin.rs  systems.rs
crates/eulumdat-bevy/src/viewer/: camera.rs  controls.rs  designer_scenes.rs  egui_panel.rs  goniosim_scene.rs  mod.rs  plugin.rs  scenes.rs  wasm_sync.rs
crates/eulumdat-cli/: Cargo.toml  README.md
crates/eulumdat-cli/src/: cli.rs  commands.rs  main.rs
crates/eulumdat-cli/tests/: parquet_smoke.rs
crates/eulumdat-dev-server/: Cargo.toml
crates/eulumdat-dev-server/src/: main.rs
crates/eulumdat-egui/: Cargo.toml  build.rs
crates/eulumdat-egui/assets/templates/: _atla_grow_light_rb.xml  wiki-spotlight.ldt
crates/eulumdat-egui/src/: app.rs  main.rs  render.rs  templates.rs
crates/eulumdat-egui/src/diagram/: butterfly3d.rs  mod.rs
crates/eulumdat-egui/src/ui/: diagram_panel.rs  info_panel.rs  mod.rs  (+1 more)
crates/eulumdat-egui/wix/: License.rtf  main.wxs
crates/eulumdat-ffi/: Cargo.toml
crates/eulumdat-ffi/src/: atla_types.rs  batch.rs  bim.rs  bug_rating.rs  compare.rs  diagram.rs  error.rs  lib.rs  schema_validation.rs  types.rs  validation.rs
crates/eulumdat-gltf-pack/: Cargo.toml
crates/eulumdat-gltf-pack/src/: ktx2_decode.rs  ktx2_encode.rs  main.rs  pack.rs
crates/eulumdat-goniosim/: Cargo.toml  README.md
crates/eulumdat-goniosim/src/: catalog.rs  detector.rs  export.rs  geometry.rs  lib.rs  material.rs  ray.rs  scene.rs  source.rs  tracer.rs
crates/eulumdat-goniosim/tests/: cie_171.rs  roundtrip_suite.rs  validation.rs  vertaxis_debug.rs
crates/eulumdat-harmonyos-ffi/: Cargo.toml
crates/eulumdat-harmonyos-ffi/src/: lib.rs
crates/eulumdat-i18n/: Cargo.toml
crates/eulumdat-i18n/locales/: de.json  en.json  es.json  fr.json  it.json  pt-BR.json  ru.json  zh.json
crates/eulumdat-i18n/src/: lib.rs
crates/eulumdat-parquet/: Cargo.toml  README.md
crates/eulumdat-parquet/src/: lib.rs  schema.rs  writer.rs
crates/eulumdat-parquet/tests/: analytics.rs  batching.rs  mixed_inputs.rs  numeric_roundtrip.rs  raw_photometry.rs  roundtrip.rs
crates/eulumdat-photweb/: Cargo.toml  README.md
crates/eulumdat-photweb/src/: lib.rs  mesh.rs  photweb.rs
crates/eulumdat-plugin/: Cargo.toml  build.sh  manifest.json
crates/eulumdat-plugin/src/: lib.rs
crates/eulumdat-py/: Cargo.toml  README.md  pyproject.toml
crates/eulumdat-py/src/: lib.rs  types.rs
crates/eulumdat-quiz/: Cargo.toml
crates/eulumdat-quiz-py/: Cargo.toml  README.md  pyproject.toml
crates/eulumdat-quiz-py/src/: lib.rs
crates/eulumdat-quiz/locales/: de.json  en.json  es.json  fr.json  it.json  pt-BR.json  ru.json  zh.json
crates/eulumdat-quiz/src/: i18n.rs  lib.rs  session.rs
crates/eulumdat-rt/: Cargo.toml
crates/eulumdat-rt/src/: camera.rs  lib.rs  pipeline.rs
crates/eulumdat-rt/tests/: camera_test.rs  gpu_cie171.rs  gpu_materials.rs  gpu_vs_cpu.rs
crates/eulumdat-server/: Cargo.toml
crates/eulumdat-server/src/: main.rs  stats.rs
crates/eulumdat-tui/: Cargo.toml
crates/eulumdat-tui-quiz/: Cargo.toml
crates/eulumdat-tui-quiz/src/: app.rs  config_screen.rs  diagram.rs  i18n.rs  main.rs  quiz_screen.rs  results_screen.rs
crates/eulumdat-tui-quiz/templates/: fluorescent_luminaire.ldt  road_luminaire.ldt
crates/eulumdat-tui/src/: app.rs  input.rs  main.rs
crates/eulumdat-typst/: Cargo.toml
crates/eulumdat-typst/src/: error.rs  generator.rs  lib.rs  template.rs  world.rs
crates/eulumdat-ui/: Cargo.toml
crates/eulumdat-ui/src/: lib.rs  theme.rs  viewer_3d.rs
crates/eulumdat-wasm/: Cargo.toml  README.md  Trunk.toml  Viso Photometric Editor.webarchive  index.html
crates/eulumdat-wasm-quiz/: Cargo.toml  Trunk.toml  quiz.html
crates/eulumdat-wasm-quiz/src/: app.rs  config_screen.rs  i18n.rs  lib.rs  main.rs  quiz_view.rs  results_view.rs
crates/eulumdat-wasm-street/: Cargo.toml  Trunk.toml  street.html
crates/eulumdat-wasm-street/src/: app.rs  lib.rs  main.rs  storage_sync.rs
crates/eulumdat-wasm-templates/: Cargo.toml
crates/eulumdat-wasm-templates/src/: egui_main.rs  lib.rs  main.rs  manager.rs
crates/eulumdat-wasm/src/: analytics.rs  benchmark.rs  i18n.rs  lib.rs  main.rs
crates/eulumdat-wasm/templates/: 0-0-0.ldt  0-0-1.ldt  0-0-2.ldt  0-1-0.ldt  0-1-1.ldt  0-1-2.ldt  0-2-0.ldt  0-2-1.ldt  0-2-2.ldt  0-3-0.ldt  0-3-1.ldt  0-3-2.ldt  0-4-0.ldt  0-4-1.ldt  0-4-2.ldt  1-0-0.ldt  1-0-1.ldt  1-0-2.ldt  1-1-0.ldt  1-1-1.ldt  1-1-2.ldt  1-2-0.ldt  1-2-1.ldt  1-2-2.ldt  1-3-0.ldt  1-3-1.ldt  1-3-2.ldt  1-4-0.ldt  1-4-1.ldt  1-4-2.ldt  4058075580633_FL_MAX_LUM_900W_757_SYM_30_WAL.ldt  4058075580640_FL_MAX_LUM_900W_757_SYM_60_WAL.ldt  4058075580657_FL_MAX_LUM_900W_757_ASYM_50X110_WAL.ldt  4058075580664_FL_MAX_LUM_1200W_757_SYM_10_WAL.ldt  4058075580671_FL_MAX_LUM_1200W_757_SYM_30_WAL.ldt  _atla_fluorescent.xml  _atla_grow_light.xml  _atla_grow_light_rb.xml  _atla_halogen_lamp.xml  _atla_heat_lamp.xml  (+11 more)
crates/eulumdat-windows-preview/: Cargo.toml
crates/eulumdat-windows-preview/src/: handler.rs  lib.rs  registry.rs  render.rs
crates/eulumdat-windows-preview/wix/: main.wixobj  main.wxs
(+343 files in other folders)
