[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.2"
edition = "2021"
authors = ["Holger Trahe <trahe@mac.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/holg/eulumdat-rs"
homepage = "https://github.com/holg/eulumdat-rs"

[workspace.dependencies]
# Internal crates
eulumdat = { path = "crates/eulumdat", version = "0.2.2" }
eulumdat-ui = { path = "crates/eulumdat-ui", version = "0.2.2" }
eulumdat-bevy = { path = "crates/eulumdat-bevy", version = "0.2.2" }

# Shared dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"  # Required for uniffi error types

# egui dependencies
egui = "0.29"
eframe = "0.29"
three-d = { version = "0.18", default-features = false }

# WASM dependencies
base64 = "0.22"
gloo = "0.11"
gloo-file = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Leptos (replaces Yew)
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
console_error_panic_hook = "0.1"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }

# Dev dependencies
approx = "0.5"
wasm-bindgen-test = "0.3"
