[package]
name = "eulumdat-bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "3D scene viewer for photometric data using Bevy game engine"
keywords = ["lighting", "photometry", "bevy", "3d", "visualization"]
categories = ["game-development", "visualization"]

[lib]
name = "eulumdat_bevy"
path = "src/lib.rs"

[[bin]]
name = "eulumdat-3d"
path = "src/main.rs"

[features]
default = []
# Enable WebGL2 for WASM builds
webgl = ["bevy/webgl2"]

[dependencies]
eulumdat = { workspace = true, features = ["serde"] }
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_ui",
    "bevy_text",
    "bevy_gizmos",
    "multi_threaded",
    "tonemapping_luts",
    "png",
    "x11",        # Linux
    "wayland",    # Linux
] }
serde = { workspace = true }

# File dialogs (native only)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_ui",
    "bevy_text",
    "bevy_gizmos",
    "webgl2",
    "tonemapping_luts",
    "png",
] }
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
