[package]
name = "eulumdat-bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "3D scene viewer for photometric data using Bevy game engine"
keywords = ["lighting", "photometry", "bevy", "3d", "visualization"]
categories = ["game-development", "visualization"]

[lib]
name = "eulumdat_bevy"
path = "src/lib.rs"

[[bin]]
name = "eulumdat-3d"
path = "src/main.rs"
required-features = ["standalone"]

[features]
# Default: full viewer with demo scenes
default = ["viewer"]

# General-purpose photometric lighting (minimal, no scenes/camera)
# Use this when embedding in your own Bevy app
photometric = []

# Full viewer with demo scenes, camera, and controls (implies photometric)
viewer = ["photometric"]

# Enable WebGL2 for WASM builds
webgl = ["bevy/webgl2"]

# Enable localStorage sync for WASM hot-reload (requires wasm-bindgen)
wasm-sync = ["viewer", "wasm-bindgen", "wasm-bindgen-futures", "web-sys"]

# Enable standalone binary (for eulumdat-wasm integration)
# Disable when embedding in another WASM app to avoid duplicate wasm_start
standalone = ["wasm-sync"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_ui",
    "bevy_text",
    "bevy_gizmos",
    "multi_threaded",
    "tonemapping_luts",
    "png",
    "x11",        # Linux
    "wayland",    # Linux
] }
eulumdat = { workspace = true, features = ["serde"] }
serde = { workspace = true }

# File dialogs (native only)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_ui",
    "bevy_text",
    "bevy_gizmos",
    "webgl2",
    "tonemapping_luts",
    "png",
] }
getrandom = { version = "0.3", features = ["wasm_js"] }
# Optional WASM dependencies - only needed for standalone/wasm-sync
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["Window", "Storage"], optional = true }
