[package]
name = "eulumdat-bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "3D scene viewer for photometric data using Bevy game engine"
keywords = ["lighting", "photometry", "bevy", "3d", "visualization"]
categories = ["game-development", "visualization"]

[lib]
name = "eulumdat_bevy"
path = "src/lib.rs"

[[bin]]
name = "eulumdat-3d"
path = "src/main.rs"
required-features = ["standalone"]

[features]
# Default: full viewer with demo scenes
default = ["viewer"]

# General-purpose photometric lighting (minimal, no scenes/camera)
# Use this when embedding in your own Bevy app
photometric = []

# Full viewer with demo scenes, camera, and controls (implies photometric)
viewer = ["photometric"]

# Enable WebGL2 for WASM builds
webgl = ["bevy/webgl2"]

# Enable localStorage sync for WASM hot-reload (requires wasm-bindgen)
wasm-sync = ["viewer", "wasm-bindgen", "wasm-bindgen-futures", "web-sys"]

# Enable standalone binary (for eulumdat-wasm integration)
# Disable when embedding in another WASM app to avoid duplicate wasm_start
standalone = ["wasm-sync"]

# Enable native bevy_ui overlay panel
bevy-ui = [
    "bevy/bevy_ui",
    "bevy/bevy_ui_render",
    "bevy/bevy_ui_widgets",
    "bevy/bevy_text",
    "bevy/default_font",
    "bevy/bevy_picking",
    "bevy/bevy_input_focus",
    "bevy/ui_picking",
]

# Enable post-processing effects (Bloom, SSAO)
post-process = ["bevy/bevy_post_process"]

[dependencies]
bevy = { path = "../../../_to_sort/bevy", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_gizmos",
    "bevy_scene",
    "bevy_gltf",
    "bevy_log",
    "multi_threaded",
    "reflect_auto_register",
    "tonemapping_luts",
    "png",
    "jpeg",
    "ktx2",
    "x11",        # Linux
    "wayland",    # Linux
    "zstd_rust",
] }
eulumdat = { workspace = true, features = ["serde"] }
serde = { workspace = true }

# JSON parsing for star catalog + designer data sync
serde_json = "1"

# Obscura Demo binary — buildable for native and WASM
[[bin]]
name = "obscura-demo"
path = "examples/obscura_demo.rs"
required-features = ["post-process"]

# File dialogs (native only)
[[example]]
name = "obscura_demo"
required-features = ["post-process"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"
# UASTC transcoder for GPU-compressed textures (C++ lib, doesn't compile for wasm32)
bevy = { path = "../../../_to_sort/bevy", default-features = false, features = ["basis-universal"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { path = "../../../_to_sort/bevy", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_gizmos",
    "bevy_scene",
    "bevy_gltf",
    "bevy_log",
    "webgpu",
    "tonemapping_luts",
    "png",
    "jpeg",
    "ktx2",
    "zstd_rust",
] }
getrandom = { version = "0.3", features = ["wasm_js"] }
# Optional WASM dependencies - only needed for standalone/wasm-sync
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["Window", "Storage"], optional = true }
