[package]
name = "eulumdat-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tool for EULUMDAT (LDT) and IES photometric files"
readme = "README.md"
keywords = ["eulumdat", "ldt", "ies", "photometry", "lighting"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "eulumdat"
path = "src/main.rs"

[features]
default = []
# Enables the `export-parquet` subcommand. Adds arrow + parquet as transitive deps.
parquet = ["dep:eulumdat-parquet"]

[dependencies]
anyhow.workspace = true
atla = { workspace = true, features = ["xml", "json", "eulumdat"] }
clap.workspace = true
eulumdat.workspace = true
eulumdat-parquet = { workspace = true, optional = true }
eulumdat-typst.workspace = true
walkdir = "2.5.0"
