[package]
name = "eulumdat-dev-server"
version = "0.6.0"
edition = "2021"
description = "Development server with Brotli/Gzip support for WASM files"
publish = false

[[bin]]
name = "dev-server"
path = "src/main.rs"

[dependencies]
actix-files = "0.6"
actix-web = "4"
clap = { version = "4", features = ["derive"] }
mime_guess = "2"
