[package]
name = "eulumdat-gltf-pack"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool to pack glTF + external KTX2 textures into a self-contained GLB"

[[bin]]
name = "eulumdat-gltf-pack"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
gltf = "1.4"
gltf-json = "1.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
ktx2 = "0.4"
basis-universal = "0.3"
ktx2-rw = "0.2"
ruzstd = "0.8"
serde_json = "1.0"
texture2ddecoder = "0.1"
