[package]
name = "eulumdat-goniosim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CPU Monte Carlo photon tracer for virtual goniophotometry"
keywords = ["lighting", "photometry", "monte-carlo", "raytracing", "goniophotometer"]
categories = ["simulation", "science"]

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
serde = ["dep:serde", "eulumdat/serde"]

[dependencies]
eulumdat = { workspace = true }
nalgebra = "0.33"
rand = "0.9"
rand_xoshiro = "0.7"
rayon = { version = "1.10", optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
approx.workspace = true
