[package]
name = "eulumdat-harmonyos-ffi"
version = "0.3.0"
edition = "2021"
description = "Simple C FFI bindings for Eulumdat - HarmonyOS/Cangjie compatible"
license = "MIT OR Apache-2.0"
repository = "https://github.com/htr/eulumdat-rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
eulumdat.workspace = true
eulumdat-photweb.workspace = true

[profile.release]
lto = true
opt-level = "s"
strip = true
