[package]
name = "eulumdat-harmonyos-ffi"
version = "0.5.0"
edition = "2021"
description = "Simple C FFI bindings for Eulumdat - HarmonyOS/Cangjie compatible"
license = "AGPL-3.0-or-later"
repository = "https://github.com/htr/eulumdat-rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
eulumdat.workspace = true
eulumdat-photweb.workspace = true

[profile.release]
lto = true
opt-level = "s"
strip = true
