[package]
name = "eulumdat-i18n"
version = "0.5.0"
edition = "2021"
description = "Internationalization for Eulumdat/ATLA photometric libraries"
license = "AGPL-3.0-or-later"
repository = "https://github.com/holg/eulumdat-rs"
keywords = ["i18n", "localization", "photometry", "eulumdat"]
categories = ["internationalization", "localization"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
