[package]
name = "eulumdat-photweb"
version = "0.5.0"
edition = "2021"
authors = ["Holger Trahe <trahe@mac.com>"]
license = "AGPL-3.0-or-later"
description = "Photometric web representation, sampling, and 3D mesh generation for EULUMDAT/IES lighting data"
keywords = ["eulumdat", "ies", "photometric", "lighting", "3d-mesh"]
categories = ["science", "graphics", "rendering", "visualization"]
repository = "https://github.com/holg/eulumdat-rs"
homepage = "https://eulumdat.icu"
documentation = "https://docs.rs/eulumdat-photweb"
readme = "README.md"
rust-version = "1.70"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
eulumdat.workspace = true

[dev-dependencies]
approx = "0.5"
