[package]
name = "eulumdat-py"
version = "0.5.0"  # Must be explicit for maturin (workspace inheritance not supported)
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/holg/eulumdat-rs"
description = "Python bindings for eulumdat photometric file parsing library"

[lib]
name = "eulumdat"
crate-type = ["cdylib"]

[dependencies]
atla = { workspace = true, features = ["eulumdat", "xml", "json"] }
eulumdat.workspace = true
pyo3 = { version = "0.27", features = ["extension-module"] }
