[package]
name = "eulumdat-quiz-py"
version = "0.6.0"  # Must be explicit for maturin (workspace inheritance not supported)
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/holg/eulumdat-rs"
description = "Python bindings for the eulumdat photometric knowledge quiz engine"

[lib]
name = "eulumdat_quiz_py"
crate-type = ["cdylib"]

[dependencies]
eulumdat-quiz = { path = "../eulumdat-quiz", version = "0.6.0" }
pyo3 = { version = "0.27", features = ["extension-module"] }
