[package]
name = "eulumdat-rt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GPU ray tracing engine for photometric simulation — wgpu compute shaders"
keywords = ["lighting", "photometry", "ray-tracing", "wgpu", "gpu"]
categories = ["rendering", "simulation", "science"]

[features]
default = ["native"]
native = ["dep:pollster", "dep:env_logger"]

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = { version = "0.11", optional = true }
eulumdat = { workspace = true }
eulumdat-goniosim = { workspace = true, default-features = false }
flume = "0.11"
glam = "0.29"
log = "0.4"
pollster = { version = "0.4", optional = true }
wgpu = "29"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
