[package]
name = "eulumdat-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Eulumdat SSR server with Brotli compression and analytics"

[[bin]]
name = "eulumdat-server"
path = "src/main.rs"

[dependencies]
actix-files = "0.6"
# Web framework
actix-web = "4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Statistics storage
mime_guess = "2"
parking_lot = "0.12"
