[package]
name = "eulumdat-tui-quiz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal-based photometric knowledge quiz using ratatui"

[[bin]]
name = "eulumdat-quiz"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
crossterm = "0.28"
eulumdat = { path = "../eulumdat", version = "0.6.0" }
eulumdat-i18n = { path = "../eulumdat-i18n", version = "0.6.0" }
eulumdat-quiz = { path = "../eulumdat-quiz", version = "0.6.0" }
ratatui = "0.29"
